ENH: updated font

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                           Select
                         </button>
                         <div class="dropdown-menu p-0 m-auto dropdown-font" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down" data-key="Equal Parts School and Self-Taught">Equal Parts School and Self-Taught</a>
-                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down" data-key="Mostly Self-Taught">Mostly Self-Taught</a>
-                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down" data-key="Mostly From School (or other formal courses)">Mostly From School (or other formal courses)</a>
+                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Equal Parts School and Self-Taught">Equal Parts School and Self-Taught</a>
+                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly Self-Taught">Mostly Self-Taught</a>
+                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly From School (or other formal courses)">Mostly From School (or other formal courses)</a>
                         </div>
                       </div>
                 </div>
