--- a/index.html
+++ b/index.html
@@ -12,28 +12,35 @@
     <div id="main-container" class="container-fluid">
         <div class="row">
             <div class="col-sm-4">
-            <div class="card" style="width: 100%; height: 300px;">
-                <div class="card-header py-1 mt-0 d-flex">
-                    <h6>Tool used vs Education</h6>
-                    <div class="dropdown pl-5 ml-4">
-                        <button class="btn btn-sm btn-tansparent dropdown-toggle m-auto pt-0" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Select
-                        </button>
-                        <div class="dropdown-menu p-0 m-auto dropdown-font" aria-labelledby="dropdownMenuButton">
-                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Equal Parts School and Self-Taught">Equal Parts School and Self-Taught</a>
-                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly Self-Taught">Mostly Self-Taught</a>
-                          <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly From School (or other formal courses)">Mostly From School (or other formal courses)</a>
+                <div class="card" style="width: 100%; height: 300px;">
+                    <div class="card-header py-1 mt-0 d-flex">
+                        <h6 class="pt-1">Method Best Teaches Visualization</h6>
+                        <div class="dropdown pl-0 ml-2 pt-1">
                         </div>
-                      </div>
+                    </div>
+                    <div class="card-body p-0" id="bar_chart">
+                    </div>    
                 </div>
-                <div class="card-body p-0" id="word_cloud">
-                </div>
-            </div>
             </div>
             <div class="col-sm-4">
                 <div class="card" style="width: 100%; height: 300px;">
+                    <div class="card-header py-1 mt-0 d-flex">
+                        <h6 class="pt-1">Technologies vs Education</h6>
+                        <div class="dropdown pl-0 ml-2 pt-1">
+                            <button class="btn btn-sm btn-tansparent dropdown-toggle m-auto pt-0 dropdown-font" type="button" id="word_cloud_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Equal Parts School and Se...
+                            </button>
+                            <div class="dropdown-menu p-0 m-auto dropdown-font" aria-labelledby="word_cloud_dropdown">
+                                <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Equal Parts School and Self-Taught">Equal Parts School and Self-Taught</a>
+                                <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly Self-Taught">Mostly Self-Taught</a>
+                                <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly From School (or other formal courses)">Mostly From School (or other formal courses)</a>
+                            </div>
+                            </div>
+                    </div>
+                    <div class="card-body p-0" id="word_cloud">
+                    </div>
                 </div>
-            </div>
+            </div>        
             <div class="col-sm-4">
                 <div class="card" style="width: 100%; height: 300px;">
                 </div>
@@ -42,8 +49,8 @@
         <div class="row">
             <div class="col-sm-12">
             <div class="card mt-2">
-                <div class="card-header py-1 mt-0">
-                    <h6>Country wise pay heat map</h6>
+                <div class="card-header py-1 mt-0 d-flex">
+                    <h6 class="pt-1">Couuntry wise pay comparison</h6>
                 </div>
                 <div class="card-body py-1 px-1">
                     <!-- <h6 class="card-title ">Special title treatment</h6> -->
@@ -62,6 +69,7 @@
     <script src="node_modules/d3/dist/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
     <script src="node_modules/g1/dist/g1.min.js"></script>
+    <script src="js/bargraph.js"></script>
     <script src="js/wordcloud.js"></script>
     <script src="js/script.js"></script>
 </body>
