FIX: font and css

--- a/index.html
+++ b/index.html
@@ -4,17 +4,18 @@
 <head>
     <title>Data Viz Society</title>
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Dosis&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <div id="main-container" class="container-fluid">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <div class="card" style="width: 100%; height: 300px;">
                     <div class="card-header py-1 mt-0 d-flex">
-                        <h6 class="pt-1">Method Best Teaches Visualization</h6>
+                        <h6 class="pt-1">Method Best Teaches Visualization (Top 10)</h6>
                         <div class="dropdown pl-0 ml-2 pt-1">
                         </div>
                     </div>
@@ -41,7 +42,7 @@
                     </div>
                 </div>
             </div>        
-            <div class="col-sm-4">
+            <div class="col-sm-5">
                 <div class="card" style="width: 100%; height: 300px;">
                 </div>
             </div>
@@ -69,7 +70,7 @@
     <script src="node_modules/d3/dist/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-cloud/1.2.5/d3.layout.cloud.min.js"></script>
     <script src="node_modules/g1/dist/g1.min.js"></script>
-    <script src="js/bargraph.js"></script>
+    <script src="js/barchart.js"></script>
     <script src="js/wordcloud.js"></script>
     <script src="js/script.js"></script>
 </body>
