ENH: added role based wordcloud

--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
             </div>        
             <div class="col-sm-5">
                 <div class="card" style="width: 100%; height: 300px;">
+                    <div class="card-header py-1 mt-0 d-flex">
+                        <h6 class="pt-1">Role Tools Comparison</h6>
+                        <div class="dropdown pl-0 ml-2 pt-1">
+                            <button class="btn btn-sm btn-tansparent dropdown-toggle m-auto pt-0 dropdown-font" type="button" id="word_cloud_dropdown_role" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Academic
+                            </button>
+                            <div class="dropdown-menu p-0 m-auto dropdown-font" aria-labelledby="word_cloud_dropdown">
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="academic">Academic</a>
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="analyst">Analyst</a>
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="developer">Developer</a>
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="engineer">Engineer</a>
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="Leadership (Manager, Director, VP, etc)">Leadership (Manager, Director, VP, etc)</a>
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="scientist">Scientist</a>
+                                <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="student">Student</a>
+                            </div>
+                        </div>
+                   </div>
+                    <div class="card-body p-0" id="word_cloud_role">
+                    </div>
                 </div>
             </div>
         </div>
