FIX: added temp moda

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="card" style="width: 100%; height: 300px;">
-                    <div class="card-header py-1 mt-0 d-flex">
+                    <div class="align-items-center card-header d-flex justify-content-between">
                         <h6 class="pt-1">Technologies vs Education</h6>
                         <div class="dropdown pl-0 ml-2 pt-1">
                             <button class="btn btn-sm btn-tansparent dropdown-toggle m-auto pt-0 dropdown-font" type="button" id="word_cloud_dropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -25,7 +25,11 @@
                                 <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly Self-Taught">Mostly Self-Taught</a>
                                 <a class="dropdown-item px-1 py-1 word_cloud_drop_down dropdown-font" data-key="Mostly From School (or other formal courses)">Mostly From School (or other formal courses)</a>
                             </div>
-                            </div>
+                        </div>
+                        <button type="button" class="btn btn-tansparent px-0 open_modal" id="tech_modal" data-toggle="modal" data-target="#exampleModal">
+                            <i class="fas fa-expand-arrows-alt"></i>
+                        </button>
+                        <!-- <span class="open_modal pl-4"><i class="fas fa-expand-arrows-alt"></i></span> -->
                     </div>
                     <div class="card-body p-0" id="word_cloud">
                     </div>
@@ -33,18 +37,21 @@
             </div>
             <div class="col-sm-3">
                 <div class="card" style="width: 100%; height: 300px;">
-                    <div class="card-header py-1 mt-0 d-flex">
+                    <div class="align-items-center card-header d-flex justify-content-between">
                         <h6 class="pt-1">Method Best Teaches Visualization (Top 10)</h6>
                         <div class="dropdown pl-0 ml-2 pt-1">
                         </div>
+                        <button type="button" class="btn btn-tansparent px-0 open_modal" id="method_modal" data-toggle="modal" data-target="#exampleModal">
+                            <i class="fas fa-expand-arrows-alt"></i>
+                        </button>
                     </div>
                     <div class="card-body p-0" id="bar_chart">
-                    </div>    
+                    </div> 
                 </div>
             </div>
             <div class="col-sm-5">
                 <div class="card" style="width: 100%; height: 300px;">
-                    <div class="card-header py-1 mt-0 d-flex">
+                    <div class="align-items-center card-header d-flex justify-content-between">
                         <h6 class="pt-1">Role Tools Comparison</h6>
                         <div class="dropdown pl-0 ml-2 pt-1">
                             <button class="btn btn-sm btn-tansparent dropdown-toggle m-auto pt-0 dropdown-font" type="button" id="word_cloud_dropdown_role" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,7 +67,10 @@
                                 <a class="dropdown-item px-1 py-1 role_drop_down dropdown-font" data-key="student">Student</a>
                             </div>
                         </div>
-                   </div>
+                        <button type="button" class="btn btn-tansparent px-0 open_modal" id="role_modal" data-toggle="modal" data-target="#exampleModal">
+                                <i class="fas fa-expand-arrows-alt"></i>
+                        </button>    
+                    </div>
                     <div class="card-body p-0" id="word_cloud_role">
                     </div>
                 </div>
@@ -69,8 +79,11 @@
         <div class="row">
             <div class="col-sm-12">
             <div class="card mt-2">
-                <div class="card-header py-1 mt-0 d-flex">
-                    <h6 class="pt-1">Couuntry wise pay comparison</h6>
+                <div class="align-items-center card-header d-flex justify-content-between">
+                    <h6 class="pt-1">Country wise pay comparison</h6>
+                    <button type="button" class="btn btn-tansparent px-0 open_modal" id="pay_modal" data-toggle="modal" data-target="#exampleModal">
+                        <i class="fas fa-expand-arrows-alt"></i>
+                    </button>
                 </div>
                 <div class="card-body py-1 px-1">
                     <!-- <h6 class="card-title ">Special title treatment</h6> -->
@@ -78,6 +91,20 @@
                     <script type="text/html" src="templates/table.html" id="table-container"></script>
                 </div>
             </div>
+            </div>
+        </div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-xl" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body v_modal" id="modal_visual">
+                    <!-- <div class="w-100"></div> -->
+                </div>
             </div>
         </div>
     </div>
